--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
 
                 <div class="subHead">
-                    I'm a tech enthusiast, and a uprising Opensorce Contributor, I am persuing Bechalore's degree in Computer Science from Institute of Engineering and Science IPS Academy.
+                I'm Sonali Singh, a 3rd-year Computer Science and Engineering student, also a Community Enthusiast. Currently part of the MLSA and GDSC Core teams, I'm passionate about both dancing and management.    
                 </div>
 
                 <div class="homeBut">
